--- a/.babelrc
+++ b/.babelrc
@@ -1,3 +1,9 @@
 {
-	"presets": ["babel-preset-es2015", "react", "babel-preset-stage-0" ]
+	"presets": 
+  [
+    "env", 
+    "babel-preset-es2015",
+    "react", 
+    "babel-preset-stage-0" 
+  ]
 }
