--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "dev": "npm-run-all --parallel dev:*",
     "dev:start": "node server.js ",
-    "dev:webpack": "./node_modules/.bin/webpack -w ",
+    "dev:webpack": "./node_modules/.bin/webpack -w",
     "test": "karma start"
   },
   "author": "Seb",
@@ -14,9 +14,12 @@
   "devDependencies": {
     "babel-core": "^6.24.1",
     "babel-loader": "^7.0.0",
+    "babel-preset-env": "^1.6.1",
+    "babel-preset-es2015": "^6.24.1",
     "babel-preset-react": "^6.24.1",
     "babel-preset-stage-0": "^6.24.1",
     "bootstrap": "4.0.0-alpha.6",
+    "cookie-parser": "^1.4.3",
     "css-loader": "^0.28.4",
     "expect": "^1.20.2",
     "karma": "^1.7.0",
@@ -28,6 +31,7 @@
     "karma-webpack-with-fast-source-maps": "^1.10.1",
     "mocha": "^3.4.2",
     "node-sass": "^4.5.3",
+    "nodemon": "1.12.0",
     "npm-run-all": "^4.1.1",
     "react-addons-test-utils": "15.4.0",
     "react-redux": "^5.0.5",
@@ -36,7 +40,7 @@
     "sass-loader": "^6.0.5",
     "script-loader": "^0.7.0",
     "style-loader": "^0.18.1",
-    "webpack": "^2.6.1"
+    "webpack": "^3.8.1"
   },
   "dependencies": {
     "express": "^4.15.3",
