--- a/package.json
+++ b/package.json
@@ -12,14 +12,6 @@
   "author": "Seb",
   "license": "ISC",
   "devDependencies": {
-    "babel-core": "^6.24.1",
-    "babel-loader": "^7.0.0",
-    "babel-preset-env": "^1.6.1",
-    "babel-preset-react": "^6.24.1",
-    "babel-preset-stage-0": "^6.24.1",
-    "bootstrap": "4.0.0-alpha.6",
-    "cookie-parser": "^1.4.3",
-    "css-loader": "^0.28.4",
     "expect": "^1.20.2",
     "karma": "^1.7.0",
     "karma-chrome-launcher": "^2.1.1",
@@ -29,23 +21,32 @@
     "karma-webpack": "^2.0.3",
     "karma-webpack-with-fast-source-maps": "^1.10.1",
     "mocha": "^3.4.2",
-    "node-sass": "^4.5.3",
     "nodemon": "1.12.0",
-    "npm-run-all": "^4.1.1",
-    "react-addons-test-utils": "15.4.0",
+    "npm-run-all": "^4.1.1"
+  },
+  "dependencies": {
+    "node-sass": "^4.5.3",
     "react-redux": "^5.0.5",
     "redux": "^3.6.0",
     "redux-thunk": "2.1.0",
     "sass-loader": "^6.0.5",
     "script-loader": "^0.7.0",
     "style-loader": "^0.18.1",
-    "webpack": "^3.8.1"
-  },
-  "dependencies": {
+    "webpack": "^3.8.1",
+    "babel-core": "^6.24.1",
+    "babel-loader": "^7.0.0",
+    "babel-preset-env": "^1.6.1",
+    "babel-preset-react": "^6.24.1",
+    "babel-preset-stage-0": "^6.24.1",
+    "bootstrap": "4.0.0-alpha.6",
+    "cookie-parser": "^1.4.3",
+    "css-loader": "^0.28.4",
     "express": "^4.15.3",
     "prop-types": "^15.5.10",
-    "react": "15.4.0",
-    "react-dom": "15.4.0",
+    "react": "^16.1.1",
+    "react-dom": "^16.1.1",
+    "material-ui":"^1.0.0-beta.21",
+    "material-ui-icons":"^1.0.0-alpha.19",
     "react-router-dom": "^4.2.2"
   }
 }
